feat: continue wip for simple templated frontend

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
   <meta name="generator" content=
-  "HTML Tidy for Mac OS X (vers 31 October 2006 - Apple Inc. build 4618), see www.w3.org">
+  "HTML Tidy for HTML5 for Apple macOS version 5.8.0">
   <meta charset="UTF-8">
-
   <title>Contributed To</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com"
@@ -13,19 +11,34 @@
   <link href=
   "https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400;1,500&amp;family=Teko:wght@300;400;500;700&amp;display=swap"
   rel="stylesheet" type="text/css">
+  <link href="./static/style.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href=
+  "https://unpkg.com/dracula-ui@1.0.6/styles/dracula-ui.css">
 </head>
-
 <body>
+  <div class="heading">
+    <h1 class="drac-heading drac-heading-xl drac-text-white">
+    Contributed</h1>
+  </div>
   <div class="content">
-    <form action="/" method="post">
-      <label for="github_user">GitHub user:</label><br>
-      <input type="text" id="github_user" name="github_user"><br>
-      <br>
-      <input type="submit" value="Submit">
-    </form>
+    <div class="drac-box drac-card drac-bg-purple drac-p-md">
+      <form action="/" method="post">
+        <label class="" for="github_user">Enter GitHub username</label><br>
+        <input type="text" id="github_user" name="github_user"><br>
+        <br>
+        <input class="drac-btn drac-bg-purple" type="submit" value=
+        "Submit">
+      </form>
+      <div class="github">
+          <ul>
 
-    <div class="github">
-      <p>{{ .User }}</p>
+              {{ range . }}
+                <p> {{ .Repo }} </p>
+              <li> {{ .MR }} </li>
+
+              {{end}}
+          </ul>
+      </div>
     </div>
   </div>
 </body>
