feat: add display of data
This needs some cleaning up because it shouldn't require hefty manipulation of the returned data in order to make it viewable on the UI

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,8 +33,27 @@
           <ul>
 
               {{ range . }}
-                <p> {{ .Repo }} </p>
-              <li> {{ .MR }} </li>
+              <li> {{ .Owner }} </li>
+              <li> {{ .AvatarURL }} </li>
+              <li>
+                  <ul>
+                      {{ range .Repos }}
+
+                      <li> {{ .Name }} </li>
+                      <li>
+                          <ul>
+                              {{ range .PullRequests }}
+                              <li> {{ .Title }} </li>
+                              <li> {{ .URL }} </li>
+                              {{ end }}
+                          </ul>
+
+                      </li>
+
+                      {{ end }}
+
+                  </ul>
+              </li>
 
               {{end}}
           </ul>
