ui: add github link and error template

--- a/static/style.css
+++ b/static/style.css
@@ -118,6 +118,13 @@ a.active *,
     padding: 1vh;
 }
 
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
 .contribution {
     padding-top: 3%;
 }
