chore: _blank target for contributions

--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
                           <ul class="drac-list drac-list-purple">
                                   {{ range .PullRequests }}
                                   <li class="drac-text drac-text-white pullRequests">
-                                      <a href="{{ .URL }}"> {{ .Title }} </a>
+                                      <a href="{{ .URL }}" target="_blank"> {{ .Title }} </a>
                                   </li>
                                   {{ end }}
                           </ul>
